--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
    <div class="header">
     <div class="logo">
-        <img src="../Images/logo.png" alt="Logo">
+        <img src="./Images/logo.png" alt="Logo">
         </div>
         <nav class="navbar">
             <ul>
@@ -31,7 +31,7 @@
             </ul>
         </nav>
         <div class="searchbar">
-            <img src="../Images/Search_light.png" alt="">
+            <img src="./Images/Search_light.png" alt="">
             <h4>Search Destination</h4>
         </div>
         <h3 class="hh3">Discover The Nature New Travel</h3>
